increase max width to fix styling on Firefox

--- a/client/sass/components/_auth.scss
+++ b/client/sass/components/_auth.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   color: #a4a39b;
   width: 100%;
-  max-width: 300px;
+  max-width: 350px;
 
   &__errors {
     margin-bottom: 1rem;
